--- a/_data/2021/montreal/schedule.yml
+++ b/_data/2021/montreal/schedule.yml
@@ -75,6 +75,12 @@
 - date: 2021-06-14
   name: Introduction, Collecte de données digitales (webscrapping, API)
   events:
+    - name: "_Vidéos à regarder_"
+    - name: "Qu'est-ce que les données de trace numérique? [Video](https://youtu.be/uuSWQN7uYhk). [Slides](https://compsocialscience.github.io/summer-institute/2020/materials/day2-digital-trace-data/what-is-digital-trace-data/What_is_Digital_Trace_Data.html)."
+    - name: "Forces et faiblesses des données de trace numérique. [Video](https://www.youtube.com/watch?v=b8XTtBnENfo). [Slides](https://compsocialscience.github.io/summer-institute/2020/materials/day2-digital-trace-data/strengths-weaknesses/Rpres/Strengths_and_Weaknesses.html). [Annotated Code](https://compsocialscience.github.io/summer-institute/2020/materials/day2-digital-trace-data/strengths-weaknesses/rmarkdown/Strengths_and_Weaknesses.html)."
+    - name: "Application Programming Interfaces. [Video](https://youtu.be/jde_c7pB5U8). [Slides](https://compsocialscience.github.io/summer-institute/2020/materials/day2-digital-trace-data/apis/Rpres/APIs.html). [Annotated Code](https://compsocialscience.github.io/summer-institute/2020/materials/day2-digital-trace-data/apis/rmarkdown/Application_Programming_interfaces.html)."
+    - name: "Webscrapping. [Video](https://youtu.be/LjTZNmBjC5Q). [Slides](https://compsocialscience.github.io/summer-institute/2020/materials/day2-digital-trace-data/screenscraping/Rpres/Screenscraping.html). [Annotated Code](https://compsocialscience.github.io/summer-institute/2020/materials/day2-digital-trace-data/screenscraping/rmarkdown/Screenscraping.html)."
+    - name: "Création d'applications et de bots pour la recherche en sciences sociales. [Video](https://www.youtube.com/watch?v=3wjYcIOpBgU). [Slides](https://compsocialscience.github.io/summer-institute/2020/materials/day2-digital-trace-data/building-apps-bots/Rpres/Building_Apps_for_Social_Science_Research.html). [Annotated Code](https://compsocialscience.github.io/summer-institute/2020/materials/day2-digital-trace-data/building-apps-bots/rmarkdown/Building_Apps_and_Bots_for%20Social_Science_Research.html)."
     - name: "9:00 - 9:30 Arrivée"
     - name: "9:30 - 10:00 Introduction"
     - name: "10:00 - 11:00 Retour sur la vidéo du cours (Zoom)"
@@ -85,6 +91,12 @@
 - date: 2021-06-15
   name: Analyse quantitative de texte
   events:
+    - name: "_Vidéos à regarder_"
+    - name: "Une introduction à l'analyse de texte. [Video](https://www.youtube.com/watch?v=pLsC4UyzX_U). [Slides](https://compsocialscience.github.io/summer-institute/2020/materials/day3-text-analysis/intro-text-analysis/Rpres/Introduction_to_Text_as%20Data.html). [Annotated Code](https://compsocialscience.github.io/summer-institute/2020/materials/day3-text-analysis/intro-text-analysis/rmarkdown/Introduction_to_Text_Analysis.html)."
+    - name: "Bases de l'analyse de texte. [Video](https://www.youtube.com/watch?v=TAlO-5NJB7I). [Slides](https://compsocialscience.github.io/summer-institute/2020/materials/day3-text-analysis/basic-text-analysis/Rpres/Basic_Text_Analysis.html). [Annotated Code](https://compsocialscience.github.io/summer-institute/2020/materials/day3-text-analysis/basic-text-analysis/rmarkdown/Basic_Text_Analysis_in_R.html)."
+    - name: "Analyse de texte basée sur un dictionnaire. [Video](https://www.youtube.com/watch?v=wSIi2ZRKjaE). [Slides](https://compsocialscience.github.io/summer-institute/2020/materials/day3-text-analysis/dictionary-methods/Rpres/Dictionary_Based_Analysis.html). [Annotated Code](https://compsocialscience.github.io/summer-institute/2020/materials/day3-text-analysis/dictionary-methods/rmarkdown/Dictionary-Based_Text_Analysis.html)."
+    - name: "Modèles thématiques. [Video](https://www.youtube.com/watch?v=T2ZRBi1oUME). [Slides](https://compsocialscience.github.io/summer-institute/2020/materials/day3-text-analysis/topic-modeling/Rpres/Topic_Modeling.html). [Annotated Code](https://compsocialscience.github.io/summer-institute/2020/materials/day3-text-analysis/topic-modeling/rmarkdown/Topic_Modeling.html)."
+    - name: "Réseaux de texte. [Video](https://www.youtube.com/watch?v=-2dBI2ULcQw). [Slides](https://compsocialscience.github.io/summer-institute/2020/materials/day3-text-analysis/text-networks/Rpres/Text_Networks.html). [Annotated Code](https://compsocialscience.github.io/summer-institute/2020/materials/day3-text-analysis/text-networks/rmarkdown/Text_Networks.html)."
     - name: "9:00 - 9:30 Debriefing"
     - name: "9:30 - 10:30 Retour sur la vidéo du cours (Zoom)"
     - name: "10:30 - 12:30 Labo (Zoom)"
@@ -94,6 +106,11 @@
 - date: 2021-06-16
   name: "Enquêtes à l'ère numérique"
   events:
+    - name: "_Vidéos à regarder_"
+    - name: "La recherche par sondage à l'ère numérique. [Video](https://www.youtube.com/watch?v=j8fJGV17Hcg). [Slides](https://github.com/compsocialscience/summer-institute/blob/master/2020/materials/day4-surveys/01-survey-research-digital-age.pdf)."
+    - name: "Échantillonnage probabiliste et non probabiliste. [Video](https://www.youtube.com/watch?v=SLAi9v5CCnM). [Slides](https://github.com/compsocialscience/summer-institute/tree/master/2020/materials/day4-surveys/02-nonprobability-sampling.pdf)."
+    - name: "Entretiens administrés par ordinateur. [Video](https://www.youtube.com/watch?v=HT1bQ3Bh79w). [Slides](https://github.com/compsocialscience/summer-institute/tree/master/2020/materials/day4-surveys/03-computer-administered-interviews.pdf)."
+    - name: "Combiner sondages et mégadonnées. [Video](https://www.youtube.com/watch?v=_vecQs7aB6o). [Slides](https://github.com/compsocialscience/summer-institute/tree/master/2020/materials/day4-surveys/04-combining-surveys-and-big-data.pdf)."
     - name: "9:00 - 9:30 Debriefing"
     - name: "9:30 - 10:30 Retour sur la vidéo du cours (Zoom)"
     - name: "10:30 - 12:30 Labo (Zoom)"
@@ -103,6 +120,7 @@
 - date: 2021-06-17
   name: Apprentissage automatique (machine learning)
   events:
+    - name: "_Vidéos à regarder_"
     - name: "9:00 - 9:30 Debriefing"
     - name: "9:30 - 10:30 Retour sur la vidéo du cours (Zoom)"
     - name: "10:30 - 12:30 Labo (Zoom)"
@@ -112,6 +130,10 @@
 - date: 2021-06-18
   name: Éthique
   events:
+    - name: "_Vidéos à regarder_"
+    - name: "Éthique. [Video Partie 1](https://youtu.be/A-5QaX5ZiK8). [Slides Partie 1](https://github.com/compsocialscience/summer-institute/blob/master/2020/materials/day1-intro-ethics/ethics_part1.pdf)." 
+    - name: "Éthique. [Video Partie 2](https://youtu.be/TT6dOQMKHhA). [Slides Partie 2](https://github.com/compsocialscience/summer-institute/blob/master/2020/materials/day1-intro-ethics/ethics_part2.pdf)."
+    - name: "Éthique. [Video Ajouts et Extensions](https://youtu.be/lJyK6kXeDbc). [Slides Ajouts et Extensions](https://github.com/compsocialscience/summer-institute/blob/master/2020/materials/day1-intro-ethics/ethics_additions_extensions.pdf)."
     - name: "9:00 - 9:30 Debriefing"
     - name: "9:30 - 10:30 Retour sur la vidéo du cours (Zoom)"
     - name: "10:30 - 12:30 Labo (Zoom)"
