fixed an extra double quote
 that prevents website building

--- a/_data/2021/montreal/schedule.yml
+++ b/_data/2021/montreal/schedule.yml
@@ -47,7 +47,7 @@
   name: Modélisation
   events:
     - name: "_Vidéos concernées sur Datacamp :_ [Introduction to Statistical Modeling in R](https://learn.datacamp.com/courses/introduction-to-statistical-modeling-in-r), [Modeling with Data in the Tidyverse](https://learn.datacamp.com/courses/modeling-with-data-in-the-tidyverse), [Intermediate Statistical Modeling in R](https://learn.datacamp.com/courses/intermediate-statistical-modeling-in-r)."
-    - name: "9:00 - 9:30 Debriefing"."
+    - name: "9:00 - 9:30 Debriefing."
     - name: "9:00 - 9:30 Debriefing"
     - name: "9:30 - 11:15 Formation (Zoom)"
     - name: "11:15 - 11:30 Pause (Zoom)"
