--- a/_data/2021/howard-mathematica/people.yml
+++ b/_data/2021/howard-mathematica/people.yml
@@ -96,7 +96,7 @@ lunchtime talks:
       
     - name: FactSpace West Africa and FakeNetAI
       image: /assets/images/FactSpace.png
-      bio: "Synthetic media, or deepfake technology is advancing rapidly and developing into a powerful disinformation tool, and few organizations or individuals are protected against this evolving threat. FactSpace West Africa and FakeNetAI, backed by Facebook, The International Fact-Checking Network, and UC Berkeley have partnered to combat deepfake attacks. Their deepfake detection solution, powered by cutting edge artificial intelligence technology, accurately and quickly detects deepfakes, protecting users against the economic and societal harms that deepfakes pose."
+      bio: "Synthetic media, or deepfake technology, is advancing rapidly and developing into a powerful disinformation tool, and few organizations or individuals are protected against this evolving threat. FactSpace West Africa and FakeNetAI, backed by Facebook, The International Fact-Checking Network, and UC Berkeley have partnered to combat deepfake attacks. Their deepfake detection solution, powered by cutting edge artificial intelligence technology, accurately and quickly detects deepfakes, protecting users against the economic and societal harms that deepfakes pose."
       website: https://ghanafact.com/category/deepfakes/ 
      
 participants: 
