--- a/_data/2021/howard-mathematica/people.yml
+++ b/_data/2021/howard-mathematica/people.yml
@@ -94,7 +94,12 @@ lunchtime talks:
       bio: " ‘Open access publishing is fundamental to what we do and to our mission. We’re a public research university, and our research is largely funded by public dollars, from residents of California and the U.S. So, we feel an obligation to make the results of our research available to those worldwide who will benefit from our advances, without having to pay to read them.’ - Jeffrey Mackie-Mason "
       website: https://osc.universityofcalifornia.edu/uc-publisher-relationships/resources-for-negotiating-with-publishers/negotiating-with-scholarly-journal-publishers-a-toolkit/
       
-     
+    - name: FactSpace West Africa and FakeNetAI
+      image: /assets/images/FactSpace.png
+      bio: "Synthetic media, or deepfake technology is advancing rapidly and developing into a powerful disinformation tool, and few organizations or individuals are protected against this evolving threat. FactSpace West Africa and FakeNetAI, backed by Facebook, The International Fact-Checking Network, and UC Berkeley have partnered to combat deepfake attacks. Their deepfake detection solution, powered by cutting edge artificial intelligence technology, accurately and quickly detects deepfakes, protecting users against the economic and societal harms that deepfakes pose."
+      website: https://ghanafact.com/category/deepfakes/
+    
+    
 participants: 
   title: Participants
   people:
