--- a/_data/2021/istanbul/participants.yml
+++ b/_data/2021/istanbul/participants.yml
@@ -3,9 +3,9 @@
   bio: “Aybuke Atalay is a PhD student in Politics at the University of Edinburgh. She holds a MSc in International Relations. Her research focuses on disinformation and computational propaganda in Turkey. She is particularly interested in political bot networks in Twitter.”
   website: https://www.linkedin.com/in/aybuke-atalay-094784129/
 
-- name: Ege	Otenen
+- name: Ege Ötenen
   image: /assets/images/1nhiPgI9bpQDZTKheGSott9m_hYx55wwg.jpeg
-  bio: “Ege Otenen is a cognitive psychology master’s student at Sabanci University, Istanbul. She is interested in phenomenological characteristics, and visual imagery of autobiographical memories. She loves to read and learn about big data and how  to combine it with memory.”
+  bio: “Ege Ötenen is a cognitive psychology master’s student at Sabanci University, Istanbul. She is interested in phenomenological characteristics, and visual imagery of autobiographical memories. She loves to read and learn about big data and how  to combine it with memory.”
   website:
 
 - name: Özgür Can	Seçkin
