--- a/_data/2021/istanbul/participants.yml
+++ b/_data/2021/istanbul/participants.yml
@@ -87,3 +87,8 @@
   image: /assets/images/1vs4ev1qE2GQ4wlvLyiOXiwMel12btsDy.jpeg
   bio: “Özgür hold a Master of Design degree in Industrial Product Design with the thesis research in the field of “Human Centered Design” and BSc. degree in Computer Science Engineering. He has part-time lectured for the  Information Design course and psychology for the game design course in different universities before.”
   website: http://products.ozguronal.com/
+
+- name: Oğuzhan	İzmir
+  image: 
+  bio: "Oğuzhan İzmir is a master's student in International Relations. He is interested in the use of computational methods in Border Studies."
+  website: 
