--- a/_data/2021/istanbul/schedule.yml
+++ b/_data/2021/istanbul/schedule.yml
@@ -155,11 +155,9 @@
 
       
 - date: 2021-06-24
-  name: Book Talk and Work on Group Projects
+  name: Work on Group Projects
   events:
-     - name: "19:00-20:00 Office Hour and Flash Talks of Group Projects on Wonder"  
-     - name: "20:00-22:00 **Social Media as Spatial Conflict Event Data**"
-     - name: "**[Akin Unver and Ahmet Kurnaz](https://sicss.io/2021/istanbul/people)**"
+     - name: "16:00-17:00 Office Hour and Flash Talks of Group Projects on Wonder"  
 
      
 - date: 2021-06-25
