--- a/_data/2021/beijing/schedule.yml
+++ b/_data/2021/beijing/schedule.yml
@@ -4,7 +4,7 @@
   events:
     - name: "8:00 - 8:25 Introduction and logistics"
     - name: "8:30 - 9:25 Speeding dating"
-    - name: "9:30 - 10:55 Reading group Introduction to networks"
+    - name: "9:30 - 10:55 Reading group: Introduction to networks"
     - name: "21:00 - 22:30 Sandy Pentland speaks at SICSS Beijing + Q&A"
 
 - date: 2021-06-15
