--- a/_data/2021/law/participants.yml
+++ b/_data/2021/law/participants.yml
@@ -1,3 +1,8 @@
+- name: Abdurrahman Erol
+  image: /assets/images/AbdurrahmanErol.JPG
+  bio: "Abdurrahman is a PhD researcher at the Department of International and European Law, Erasmus University Rotterdam. Prior to starting his doctorate, he received an LL.M. on International and European Law and completed Research Master in Law, both at Tilburg University. His research interests lie at the intersection of international investment law and human rights law. His PhD project focusses on the formulation of investor obligations in international investment agreements and the potential translation of principles from the business and human rights domain into investment agreements in the form of obligations upon investors."
+  website: 
+
 - name: Anna Sekuła
   image: /assets/images/AnnaSekuła.JPG
   bio: "Anna is a PhD candidate in Comparative Analysis of Institutions, Economics and Law at the University of Turin and Collegio Carlo Alberto, Italy. In her work she focuses on the dynamics of change in legal pluralism and studies developments in human and environmental rights litigation across jurisdictions. She is also interested in methodology and philosophy of law and economics." 
@@ -7,7 +12,12 @@
   image: /assets/images/AntonioDavola.jpeg
   bio: "Dr. Antonio Davola, LLB with honors (University of Pisa, 2015), LLM (Yale Law School, 2018) PhD with honors in “Law and Technology” (Sant’ Anna School of Advanced studies, Pisa, 2019) is Adjunct Professor and Post-Doc Research Fellow at LUISS Guido Carli University in Rome, and Marie Sklodowska Curie Individual Fellow at the University of Amsterdam. His main areas of interest involve financial markets regulation, competition law, consumer protection and the governance of new technologies in the European framework. He devotes significant attention to the application of experimental and empirical analysis to consumer protection, consistently with a research approach strongly focused on Law &Economics. His Marie Curie project “Fair Personalisation” investigates how the use of online personalised and tailored offers affects individual propensity to consume, in order to ultimately redefine the normative thresholds and conditions under which targeted commercial practices may be deemed unfair or manipulative under EU law, laying the foundations for framing a harmonized regulation."
   website: https://www.antoniodavola.com/
-    
+ 
+- name: Choky R. Ramadhan
+  image: /assets/images/ChokyRamadhan.jpg
+  bio: "Choky R. Ramadhan is a Ph.D. candidate at the University of Washington School of Law. He is a lecturer at the Faculty of Law University of Indonesia who teaches anti-corruption clinic and criminal procedure law. Choky obtained a bachelor of law (LL.B.) from the University of Indonesia and a master of Asia and Comparative Law (LL.M.) from the University of Washington. His research interest is criminal justice policy, drug policy, criminal procedure, anti-corruption, and judicial reform. He has worked with Indonesian agencies, international organizations, national NGOs, and Universities to provide research and policy papers on those topics in Indonesia."
+  website: https://www.linkedin.com/in/choky-ramadhan-563248a6/
+  
 - name: Delia Lucía Martínez Lorenzo
   image: /assets/images/LuciaMartinez.jpg
   bio: "Lucía Martínez Lorenzo holds a Bachelor Degree in Law from Deusto University (Spain), with a minor in Public Law, and an LL.M. in Legal Practice from Universidad de Nebrija (Spain). She successfully passed the national Bar qualification exam in March 2018, and later that year, she became a registered lawyer at the ICALugo. In September 2018, Lucía started as a PhD researcher jointly with the Faculties of Law of Hasselt University and Maastricht Universtity. Her PhD research is entitled “The impact of public procurement law on horizontal and vertical teaming of economic operators in construction projects. Reconciling effective and undistorted competition and the free market”. She has recently written about the consequences of digitalisation for public procurement law developments."
@@ -21,7 +31,12 @@
 - name: Ilya Ilin
   image: /assets/images/IlyaIlin.jpg
   bio: "Ilya is a Junior Research Fellow in IT Law and Ph.D. student of the School of Law at the Tartu University (Estonia). He holds a Master’s degree in Information Technology Law from the University of Tartu and a Specialist’s degree in Law from the St. Petersburg State Engineering and Economic University (Russia). His area of research concerns the legal aspects of Natural Language Processing (NLP) development. Within research, he explores the application of various NLP techniques and their components, such as speech and voice, in the information technology sphere from the perspective of intellectual property and data protection law. "
-  website: https://www.etis.ee/CV/Ilya_Ilin/eng
+  website: https://www.etis.ee/CV/Ilya_Ilin/eng  
+  
+- name: Łukasz Szoszkiewicz
+  image: /assets/images/ŁukaszSzoszkiewicz.jpg
+  bio: "Łukasz Szoszkiewicz is a research assistant in Poznan Human Rights Centre (Institute of Law Studies of the Polish Academy of Sciences). He obtained his Ph.D. in law at Adam Mickiewicz University. His research is focused in the areas of artificial intelligence (AI) and human rights as well as children’s rights. Since 2018, he has been actively engaged in the preparation of the UN Global Study on Children Deprived of Liberty (as the Data Coordinator) and currently leads one of its follow-up projects on data related aspects of immigration detention of children (funded by the Global Campus of Human Rights). In 2019, he undertook a half-year internship at the EU Agency for Fundamental Rights (Research and Data Unit)."
+  website: http://www.phrc.pl/lukasz-szoszkiewicz/?lang=en
 
 - name: Noam Kolt
   image: /assets/images/NoamKolt.jpg
@@ -32,11 +47,14 @@
   image: /assets/images/SiyunJiang.jpg
   bio: "Siyun is a Ph.D. candidate in the Department of Government and an M.A. in Statistics student in the Department of Statistics and Data Science at the University of Texas at Austin. She broadly studies political economy and judicial politics with causal inference methods and text analysis. Her dissertation is on the impact of political centralization and local bureaucratic resistance in China’s judicial system. Before joining in UT, she lived and studied in Mainland China, Taiwan, Thailand and Hong Kong."
   website: https://siyunjiang.weebly.com/
+  
+- name: Wojciech Giemza
+  image: /assets/images/WojtekGiemza.jpg
+  bio: "Wojciech is a PhD Researcher at the Department of Law of the European University Institute (EUI) in Florence. He earned an MA in law at the University of Warsaw and an LL.M. in international law at the EUI. His main research interests are public international law (in particular international economic law), international adjudication, legal sociology, anthropology and history. He is a founding member of the International Economic Law and Policy Working Group and a former Researchers’ Representative at the EUI. His PhD project concerns the use of references to the International Court of Justice and the Permanent Court of International Justice in investment arbitration. The project involves doctrinal and empirical approach to the texts of judicial decisions, including citation network analysis and causal inferences, combined with socio-legal and historical insights."
+  website: 
  
 - name: Wu Hao
   image: /assets/images/WuHao.png
   bio: "Wu Hao is a PhD student in the Department of Computing Science at the University of Aberdeen. His research focuses on automatising the justification process of the query result in an argumentation system and optimising the efficiency of related algorithms.  His interests also lie in functional programming and data analysis."
   website:
-  
-
-# [to be completed]
+ 
