--- a/_data/2021/law/participants.yml
+++ b/_data/2021/law/participants.yml
@@ -2,6 +2,11 @@
   image: /assets/images/AbdurrahmanErol.JPG
   bio: "Abdurrahman is a PhD researcher at the Department of International and European Law, Erasmus University Rotterdam. Prior to starting his doctorate, he received an LL.M. on International and European Law and completed Research Master in Law, both at Tilburg University. His research interests lie at the intersection of international investment law and human rights law. His PhD project focusses on the formulation of investor obligations in international investment agreements and the potential translation of principles from the business and human rights domain into investment agreements in the form of obligations upon investors."
   website: 
+  
+- name: Anna Kovács
+  image: /assets/images/AnnaKovács.JPG
+  bio: "Anna Kovács is a PhD Researcher in the European Doctorate in Law and Economics (EDLE) program, which is organized by three universities: Erasmus University of Rotterdam, the University of Bologna, and the University of Hamburg. She holds an LL.B. degree in International and European Law from the University of Groningen, and an MSc. degree in International Relations and Diplomacy from Leiden University. Her research areas of interest include (international) climate change law and policy, environmental law, geoengineering, and collective action problems. In her dissertation, she analyzes the impact of behavioral factors on the emergence of international action on large-scale collective action problems."
+  website: 
 
 - name: Anna Sekuła
   image: /assets/images/AnnaSekuła.JPG
