--- a/_data/2021/hse/schedule.yml
+++ b/_data/2021/hse/schedule.yml
@@ -48,7 +48,7 @@
   name: Surveys in the Digital Age
   events:
     - name: "12:00 - 12:15 Logistics (*Zoom*)"
-    - name: "12:15 - 12:30 Introduction to the group exercise (*Zoom*)"
+    - name: "12:15 - 12:30 [Introduction to the group exercise](https://github.com/compsocialscience/summer-institute/blob/master/2021/materials/day4-surveys/activity/intro-to-activity.pdf) (*Zoom*)"
     - name: "12:30 - 13:30 Morning group exercise based on the pre-recorded lectures [Day 4](https://sicss.io/curriculum) (*Zoom*)"
     - name: "13:30 - 14:00 Break"
     - name: "14:00 - 15:00 Participant flash talks (encouraged) (*Zoom*)"
@@ -65,7 +65,7 @@
   events:
     - name: "12:00 - 12:15 Logistics (*Zoom*)"
     - name: "12:15 - 12:30 Introduction to the group exercise [Video](https://www.youtube.com/watch?v=ZI95vV7Co38) [Slides](https://github.com/compsocialscience/summer-institute/blob/master/2020/materials/day5-mass-collaboration/06-ffchallenge_participate_activity.pdf) (*Zoom*)"
-    - name: "12:30 - 13:30 Participate in the Fragile Families Challenge [Lesson plan (participants)](https://github.com/compsocialscience/summer-institute/blob/master/2021/materials/day5-mass-collaboration/activity/lesson_plan_masscollaboration_participant.md#lesson-plan-for-participants) (*Zoom*)"
+    - name: "12:30 - 13:30 Participate in the Fragile Families Challenge [Lesson plan (participants)](https://github.com/compsocialscience/summer-institute/blob/master/2021/materials/day5-mass-collaboration/activity/lesson_plan_masscollaboration_participant.md#lesson-plan-for-participants), [Lesson plan (instructors)](https://github.com/compsocialscience/summer-institute/blob/master/2021/materials/day5-mass-collaboration/activity/lesson_plan_masscollaboration_instructor.md#lesson-plan-for-instructors) (*Zoom*)"
     - name: "13:30 - 14:00 Break"
     - name: "14:00 - 15:00 Continue participating in the Fragile Families Challenge (*Zoom*)"
     - name: "15:00 - 15:15 Break"
