--- a/_data/2021/beijing/schedule.yml
+++ b/_data/2021/beijing/schedule.yml
@@ -46,21 +46,21 @@
   name: ""
   events:
     - name: "8:30 - 9:55 Participants discuss team projects (organized by each team separately; each team can schedule extra meeting/discussion)"
-    - name: "10:00 - 11:00 Participants' research presentation: Anfan, Anmol, Chao, Zhuo "
+    - name: "10:00 - 11:00 Participants' research presentation: Anfan, Anmol, Guang, Zhuo "
     - name: "21:00 - 23:00 YY Ahn speaks at SICSS Beijing + 1:1 meetings"
 
 - date: 2021-06-22
   name: ""
   events:
     - name: "9:00 - 11:00 Yi Bu speaks at SICSS Beijing + 1:1 meetings"
-    - name: "21:00 - 21:55 Participants' research presentation: Cheng-Jun, Chenshuo, Guang, Sophie"
+    - name: "21:00 - 21:55 Participants' research presentation: Cheng-Jun, Chenshuo, Chao, Sophie"
     - name: "22:00 - 22:55 Participants discuss team projects (organized by each team separately; each team can schedule extra meeting/discussion)"
 
 - date: 2021-06-23
   name: ""
   events:
     - name: "8:30 - 9:25 Participants discuss team projects (organized by each team separately; each team can schedule extra meeting/discussion)"
-    - name: "9:30 - 11:00 Participants' research presentation: Jasmine, Kunru, Sachin, Shengchun, Shiyao, Xiangyu"
+    - name: "9:30 - 11:00 Participants' research presentation: Jasmine, Kunru, Sachin, Shengchun, Shiyang, Xiangyu"
     - name: "21:00 - 23:00 Mohsen Mosleh speaks at SICSS Beijing + 1:1 meetings"
 
 - date: 2021-06-24
