--- a/_data/2021/law/participants.yml
+++ b/_data/2021/law/participants.yml
@@ -54,11 +54,18 @@ She holds a Master's Degree in Economics of International Institutions and a Bac
   image: /assets/images/ŁukaszSzoszkiewicz.jpg
   bio: "Łukasz Szoszkiewicz is a research assistant in Poznan Human Rights Centre (Institute of Law Studies of the Polish Academy of Sciences). He obtained his Ph.D. in law at Adam Mickiewicz University. His research is focused in the areas of artificial intelligence (AI) and human rights as well as children’s rights. Since 2018, he has been actively engaged in the preparation of the UN Global Study on Children Deprived of Liberty (as the Data Coordinator) and currently leads one of its follow-up projects on data related aspects of immigration detention of children (funded by the Global Campus of Human Rights). In 2019, he undertook a half-year internship at the EU Agency for Fundamental Rights (Research and Data Unit)."
   website: http://www.phrc.pl/lukasz-szoszkiewicz/?lang=en
+  
+- name: Mojtaba Ghasemi
+  image: /assets/images/MojtabaGhasemi.jpg
+  website: http://en.sbu.ac.ir/Pages/Profiles.aspx?proffID=394057
 
 - name: Noam Kolt
   image: /assets/images/NoamKolt.jpg
   bio: "Noam Kolt is a doctoral candidate at the University of Toronto Faculty of Law. His research focuses on contract law, computational text analysis, and the governance of artificial intelligence. Noam was appointed an inaugural Schwartz Reisman Institute for Technology and Society Graduate Fellow and held an Ethics of AI Graduate Research Fellowship at the University of Toronto Centre for Ethics. Noam’s scholarship has been published or is forthcoming in the Berkeley Technology Law Journal, Yale Law & Policy Review, International Journal of Constitutional Law, and Melbourne University Law Review."
   website: https://papers.ssrn.com/sol3/cf_dev/AbsByAuth.cfm?per_id=3448175
+  
+- name: Sandra Hahn
+  bio: "I am a PhD candidate in Economic Sociology at the Lisbon School of Economics and Management (ISEG), which is part of the University of Lisbon. I studied Journalism and I have a Master's Degree in Latin America Studies with concentration in Political Science." 
 
 - name: Siyun Jiang
   image: /assets/images/SiyunJiang.jpg
