--- a/_data/2021/fgv-dapp-brazil/schedule.yml
+++ b/_data/2021/fgv-dapp-brazil/schedule.yml
@@ -67,7 +67,7 @@
     - name: "3:15 - 3:30 Whole group debrief about group exercise (*Zoom*)"
     - name: "3:30 - 3:45 Debrief and logistics (*Zoom*)"
     - name: "3:45 - 4:00 [Delete](https://github.com/compsocialscience/summer-institute/blob/master/2021/materials/day5-mass-collaboration/activity/lesson_plan_masscollaboration_participant.md#deleting-the-files-after-use) the Fragile Families data from your computer"
-    - name: "4:00 - 4:45 GUEST-SPEAKER: **Thiago Marzagão**: Data Science and Machine Learning in the Brazilian Government" 
+    - name: "4:00 - 4:45 GUEST-SPEAKER: **Thiago Marzagão**: **Putting a price on real estate**:Data Science and Machine Learning in the Brazilian Government" 
 
 
 - date: 2021-06-19
@@ -88,7 +88,7 @@
   
 - date: 2021-06-22
  
-  name: Work on group projects (optional) and/or participate in SICSS Festival
+  name: Research Speed Dating
   events:
     - name: "10:00 - 10:30 Research Speed Dating Logistics (*Zoom*), [Slides for Instructors] (link coming soon)"
     - name: "10:30 - 11:30 Research Speed Dating Maximally Similar Groups (*Zoom*)"
