--- a/_data/2021/law/schedule.yml
+++ b/_data/2021/law/schedule.yml
@@ -11,7 +11,7 @@
     - name: "13.00 - 14.00 Small group lunches (*Zoom*)"
     - name: "14.00 - 14.30 Break"
     - name: "14.30 - 15.30 Guest speaker: Teun J Dekker (*Zoom*)"
-    - name: "15.30 - 15.45 Introduction to the group exercise: [Lesson plan](https://github.com/compsocialscience/summer-institute/blob/master/2020/materials/day1-intro-ethics/activity/lesson_plan_ethics_participant.md) (*Zoom*)"
+    - name: "15.30 - 15.45 Introduction to the group exercise: [Lesson plan (participants)](https://github.com/compsocialscience/summer-institute/blob/master/2021/materials/day1-intro-ethics/small_group_discussions.md) (*Zoom*)"
     - name: "15.45 - 17.30 Group exercise: [Case study](https://bdes.datasociety.net/wp-content/uploads/2016/10/Patreon-Case-Study.pdf) (*Zoom*)"
     - name: "17.30 - 18.00 Break"
     - name: "18.00 - 19.15 Keynote speaker: Michael A. Livermore (*Zoom*)"
